--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8" />
+  <title>HTML Academy: Нёрдс</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="https://via.placeholder.com/160x65" alt="logo" width="160" height="65" />
+      </a>
+      <ul>
+        <li><a href="#">Студия</a></li>
+        <li><a href="#">Клиенты</a></li>
+        <li><a href="inner.html">Магазин</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Корзина</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <ul>
+        <li>
+          <img src="https://via.placeholder.com/300x146" alt="web-pages" width="300" height="146">
+          <h3>ВЕБ-САЙТЫ</h3>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a href="#">ЗАКАЗАТЬ</a>
+        </li>
+
+        <li>
+          <img src="https://via.placeholder.com/300x146" alt="web-pages" width="300" height="146">
+          <h3>ПРИЛОЖЕНИЯ</h3>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a href="#">ЗАКАЗАТЬ</a>
+        </li>
+
+        <li>
+          <img src="https://via.placeholder.com/300x146" alt="web-pages" width="300" height="146">
+          <h3>ПРЕЗЕНТАЦИИ</h3>
+          <p>Вы даже не подозреваете,
+            насколько вы изумительны!</p>
+          <a href="#">ЗАКАЗАТЬ</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <div>
+        <h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладая
+          рук, как роботы.</p>
+        <ul>
+          <li>
+            <h3>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h3>
+          </li>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </div>
+      <div>
+        <img src="https://via.placeholder.com/300x208" alt="nerds-logo">
+        <h3>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</h3>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <section>
+      <ul>
+        <li><a href="#">vk</a></li>
+        <li><a href="#">facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+    </section>
+    <h2>Давайте дружить, это выгодно!</h2>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
+  </footer>
+</body>
+
 </html>
