Red areas mark-up

--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
   </header>
   <main>
     <section>
+      <div>
+        <h1>Долго, дорого, скрупулезно.</h1>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <a href="#">Узнать больше</a>
+      </div>
+      <div>
+        <img src="https://via.placeholder.com/698x413" alt="slide 1">
+        <!-- Предполагаю что картинка должна быть задана бэкграундом -->
+        <ul>
+          <li><span>pic 1</span></li>
+          <li><span>pic 2</span></li>
+          <li><span>pic 3</span></li>
+        </ul>
+      </div>
+    </section>
+    <section>
       <ul>
         <li>
           <img src="https://via.placeholder.com/300x146" alt="web-pages" width="300" height="146">
@@ -66,17 +82,49 @@
       <div>
         <img src="https://via.placeholder.com/300x208" alt="nerds-logo">
         <h3>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</h3>
+        <ul>
+          <li>
+            <h1>146%</h1>
+            <p>Уровень самоотдачи</p>
+          </li>
+          <li>
+            <h1>100%</h1>
+            <p>Соблюдение сроков</p>
+          </li>
+          <li>
+            <h1>50%</h1>
+            <p>Минимальная предоплата</p>
+          </li>
+        </ul>
       </div>
+    </section>
+    <section>
+      <ul>
+        <li><img src="https://via.placeholder.com/199x68" alt="HtmlAcademy"></li>
+        <li><img src="https://via.placeholder.com/199x68" alt="Barbershop"></li>
+        <li><img src="https://via.placeholder.com/199x68" alt="Pink"></li>
+        <li><img src="https://via.placeholder.com/199x68" alt="Mishka"></li>
+      </ul>
+    </section>
+    <section>
+      <div>
+        <h3>NЁRDS DESIGN STUDIO</h3>
+        <p>191186, Санкт-Петербург,
+          ул. Б. Конюшенная, д. 19/8
+        </p>
+        <p>тел. +7 (812) 275-75-75</p>
+      </div>
+      <!-- here is going to be a map -->
     </section>
   </main>
   <footer>
-    <section>
-      <ul>
-        <li><a href="#">vk</a></li>
-        <li><a href="#">facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-      </ul>
-    </section>
+
+    <ul>
+      <li><a href="#">vk</a></li>
+      <li><a href="#">facebook</a></li>
+      <li><a href="#">Instagram</a></li>
+    </ul>
+
     <h2>Давайте дружить, это выгодно!</h2>
     <p>Скидка 10% для друзей из социальных сетей.</p>
   </footer>
