--- a/inner.html
+++ b/inner.html
@@ -28,6 +28,21 @@
   </header>
   <main>
     <section>
+
+      <h3>СТОИМОСТЬ:</h3>
+      <h3>СОРТИРОВАТЬ:</h3>
+      <ul>
+        <li><a href="">ПО ЦЕНЕ</a></li>
+        <li><a href="">ПО ТИПУ</a></li>
+        <li><a href="">ПО НАЗВАНИЮ</a></li>
+      </ul>
+      <ul>
+        <li><span>arrow-down</span></li>
+        <li><span>arrow-up</span></li>
+      </ul>
+    </section>
+    <section>
+      <!-- place for a slider -->
       <div>
         <h3>Сетка:</h3>
         <ul>
@@ -47,26 +62,43 @@
         </ul>
       </div>
       <button type="button">Показать</button>
+    </section>
+    <section>
+      <ul>
+        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
+        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
+        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
+        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
+        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
+        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
+      </ul>
+      <ul>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">СЛЕДУЮЩАЯ</a></li>
+      </ul>
+    </section>
+    </section>
+    <section>
       <div>
-        <ul>
-          <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-          <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-          <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-          <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-          <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-          <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-        </ul>
+        <h3>NЁRDS DESIGN STUDIO</h3>
+        <p>191186, Санкт-Петербург,
+          ул. Б. Конюшенная, д. 19/8
+        </p>
+        <p>тел. +7 (812) 275-75-75</p>
       </div>
+      <!-- here is going to be a map -->
     </section>
   </main>
   <footer>
-    <section>
-      <ul>
-        <li><a href="#">vk</a></li>
-        <li><a href="#">facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-      </ul>
-    </section>
+
+    <ul>
+      <li><a href="#">vk</a></li>
+      <li><a href="#">facebook</a></li>
+      <li><a href="#">Instagram</a></li>
+    </ul>
+
     <h2>Давайте дружить, это выгодно!</h2>
     <p>Скидка 10% для друзей из социальных сетей.</p>
   </footer>
