Added hidden slides

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         <a href="#">Узнать больше</a>
       </div>
       <div>
+        <h1>Любим математику как никто другой</h1>
+        <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+        <a href="#">Узнать больше</a>
+      </div>
+      <div>
+        <h1>Только ночь, только хардкор</h1>
+        <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+        <a href="#">Узнать больше</a>
+      </div>
+      <div>
         <img src="https://via.placeholder.com/698x413" alt="slide 1">
         <!-- Предполагаю что картинка должна быть задана бэкграундом -->
         <ul>
