--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="https://via.placeholder.com/160x65" alt="logo" width="160" height="65" />
+        <img src="img/nerds-logo.svg" alt="logo"/>
       </a>
       <ul>
         <li><a href="#">Студия</a></li>
@@ -53,21 +53,21 @@
     <section>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/300x146" alt="web-pages" width="300" height="146">
+          <img src="img/illustration-1.jpg" alt="web-pages" width="300" height="146">
           <h3>ВЕБ-САЙТЫ</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="#">ЗАКАЗАТЬ</a>
         </li>
 
         <li>
-          <img src="https://via.placeholder.com/300x146" alt="web-pages" width="300" height="146">
+          <img src="img/illustration-2.jpg" alt="web-pages" width="300" height="146">
           <h3>ПРИЛОЖЕНИЯ</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="#">ЗАКАЗАТЬ</a>
         </li>
 
         <li>
-          <img src="https://via.placeholder.com/300x146" alt="web-pages" width="300" height="146">
+          <img src="img/illustration-3.jpg" alt="web-pages" width="300" height="146">
           <h3>ПРЕЗЕНТАЦИИ</h3>
           <p>Вы даже не подозреваете,
             насколько вы изумительны!</p>
