--- a/inner.html
+++ b/inner.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="https://via.placeholder.com/160x65" alt="logo" width="160" height="65" />
+        <img src="img/nerds-logo.svg" alt="logo"/>
       </a>
       <ul>
         <li><a href="#">Студия</a></li>
@@ -65,12 +65,12 @@
     </section>
     <section>
       <ul>
-        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
-        <li><a href="#"><img src="https://via.placeholder.com/360x576" alt=""></a></li>
+        <li><a href="#"><img src="img/img-sedona.jpg" alt="Sedona"></a></li>
+        <li><a href="#"><img src="img/img-pink.jpg" alt="Pink"></a></li>
+        <li><a href="#"><img src="img/img-barbershop.jpg" alt="Barbershop"></a></li>
+        <li><a href="#"><img src="img/img-mishka.jpg" alt="Mishka"></a></li>
+        <li><a href="#"><img src="img/img-aplus.jpg" alt="Aplus"></a></li>
+        <li><a href="#"><img src="img/img-kvast.jpg" alt="Kvast"></a></li>
       </ul>
       <ul>
         <li><a href="#">1</a></li>
