Added additional images

--- a/inner.html
+++ b/inner.html
@@ -88,7 +88,7 @@
         </p>
         <p>тел. +7 (812) 275-75-75</p>
       </div>
-      <!-- here is going to be a map -->
+      <img src="img/map.jpg" alt="map">
     </section>
   </main>
   <footer>
