--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </ul>
       </div>
       <div>
-        <img src="https://via.placeholder.com/300x208" alt="nerds-logo">
+        <img src="img/nerds-illustration.png" alt="nerds-logo">
         <h3>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</h3>
         <ul>
           <li>
@@ -110,10 +110,10 @@
     </section>
     <section>
       <ul>
-        <li><img src="https://via.placeholder.com/199x68" alt="HtmlAcademy"></li>
-        <li><img src="https://via.placeholder.com/199x68" alt="Barbershop"></li>
-        <li><img src="https://via.placeholder.com/199x68" alt="Pink"></li>
-        <li><img src="https://via.placeholder.com/199x68" alt="Mishka"></li>
+        <li><img src="img/logo-htmlacademy.png" alt="HtmlAcademy"></li>
+        <li><img src="img/logo-borodinski.png" alt="Barbershop"></li>
+        <li><img src="img/logo-pink.png" alt="Pink"></li>
+        <li><img src="img/logo-mishka.png" alt="Mishka"></li>
       </ul>
     </section>
     <section>
@@ -124,7 +124,7 @@
         </p>
         <p>тел. +7 (812) 275-75-75</p>
       </div>
-      <!-- here is going to be a map -->
+      <img src="img/map.jpg" alt="map">
     </section>
   </main>
   <footer>
