--- a/index.html
+++ b/index.html
@@ -117,6 +117,22 @@
       </ul>
     </section>
     <section>
+      <h2>Напишите нам</h2>
+      <form action="" method="post">
+        <div>
+          <label for="">Ваше имя: </label>
+          <input type="text" value="Имя Фамилия">
+          <label for="">Ваш e-mail: </label>
+          <input type="text" value="email@example.com">
+        </div>
+        <div>
+          <label for="textarea">Текст письма:</label>
+          <textarea name="В свободной форме" id="textarea" cols="30" rows="10">В свободной форме</textarea>
+        </div>
+        <input type="submit" value="ОТПРАВИТЬ">
+      </form>
+    </section>
+    <section>
       <div>
         <h3>NЁRDS DESIGN STUDIO</h3>
         <p>191186, Санкт-Петербург,
