--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="node_modules/destyle.css/destyle.css">
+  <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>HTML Academy: Нёрдс</title>
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav class="navigation">
       <a href="index.html">
         <img src="img/nerds-logo.svg" alt="logo"/>
       </a>
@@ -51,19 +55,19 @@
       </div>
     </section>
     <section>
-      <ul>
+      <ul class="services">
         <li>
           <img src="img/illustration-1.jpg" alt="web-pages" width="300" height="146">
           <h3>ВЕБ-САЙТЫ</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a href="#">ЗАКАЗАТЬ</a>
+          <a href="#" class="btn">ЗАКАЗАТЬ</a>
         </li>
 
         <li>
           <img src="img/illustration-2.jpg" alt="web-pages" width="300" height="146">
           <h3>ПРИЛОЖЕНИЯ</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a href="#">ЗАКАЗАТЬ</a>
+          <a href="#" class="btn">ЗАКАЗАТЬ</a>
         </li>
 
         <li>
@@ -71,7 +75,7 @@
           <h3>ПРЕЗЕНТАЦИИ</h3>
           <p>Вы даже не подозреваете,
             насколько вы изумительны!</p>
-          <a href="#">ЗАКАЗАТЬ</a>
+          <a href="#" class="btn">ЗАКАЗАТЬ</a>
         </li>
       </ul>
     </section>
@@ -143,7 +147,7 @@
       <img src="img/map.jpg" alt="map">
     </section>
   </main>
-  <footer>
+  <footer class="main-footer">
 
     <ul>
       <li><a href="#">vk</a></li>
