--- a/inner.html
+++ b/inner.html
@@ -5,12 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="node_modules/destyle.css/destyle.css">
+  <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Inner</title>
 </head>
 
 <body>
-  <header>
-    <nav>
+  <header class="top-header">
+    <nav class="navigation">
       <a href="index.html">
         <img src="img/nerds-logo.svg" alt="logo"/>
       </a>
@@ -27,7 +31,7 @@
     <h2>Магазин готовых шаблонов</h2>
   </header>
   <main>
-    <section>
+    <section class="filter">
       <div>
         <form action="" method="post">
           <fieldset>
@@ -39,16 +43,16 @@
             <input type="text" name="max-price" id="max-price" value="15 000">
           </fieldset>
           <fieldset>
-            <legend>СЕТКА:</legend>
-            <ul>
+            <legend class="filter-item">СЕТКА:</legend>
+            <ul class="filter-grid-item">
               <li><label for=""><input type="radio" name="" id="" checked>Адаптивная</label></li>
               <li><label for=""><input type="radio" name="" id="">Фиксированая</label></li>
               <li><label for=""><input type="radio" name="" id="">Резиновая</label></li>
             </ul>
           </fieldset>
           <fieldset>
-            <legend>ОСОБЕННОСТИ:</legend>
-            <ul>
+            <legend class="filter-item">ОСОБЕННОСТИ:</legend>
+            <ul class="filter-specifics-item">
               <li><label for=""><input type="checkbox" name="" id="" checked>Слайдер</label></li>
               <li><label for=""><input type="checkbox" name="" id="">Блок преимуществ</label></li>
               <li><label for=""><input type="checkbox" name="" id="" checked>Новости</label></li>
@@ -124,7 +128,7 @@
       <img src="img/map.jpg" alt="map">
     </section>
   </main>
-  <footer>
+  <footer class="main-footer">
 
     <ul>
       <li><a href="#">vk</a></li>
