--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navigation">
       <a href="index.html">
-        <img src="img/nerds-logo.svg" alt="logo"/>
+        <img src="img/nerds-logo.svg" alt="logo" />
       </a>
       <ul>
         <li><a href="#">Студия</a></li>
@@ -28,21 +28,21 @@
     </nav>
   </header>
   <main>
-    <section>
-      <div>
+    <section class="slider">
+      <div class="slide-item">
         <h1>Долго, дорого, скрупулезно.</h1>
         <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-        <a href="#">Узнать больше</a>
+        <a href="#" class="btn">Узнать больше</a>
       </div>
-      <div>
+      <div class="slide-item">
         <h1>Любим математику как никто другой</h1>
         <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-        <a href="#">Узнать больше</a>
+        <a href="#" class="btn">Узнать больше</a>
       </div>
-      <div>
+      <div class="slide-item">
         <h1>Только ночь, только хардкор</h1>
         <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-        <a href="#">Узнать больше</a>
+        <a href="#" class="btn">Узнать больше</a>
       </div>
       <div>
         <img src="https://via.placeholder.com/698x413" alt="slide 1">
@@ -80,11 +80,12 @@
       </ul>
     </section>
     <section>
-      <div>
+      <div class="description">
         <h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладая
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива.Работаем не
+          покладая
           рук, как роботы.</p>
-        <ul>
+        <ul class="services">
           <li>
             <h3>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</h3>
           </li>
@@ -93,7 +94,7 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </div>
-      <div>
+      <div class="statistic">
         <img src="img/nerds-illustration.png" alt="nerds-logo">
         <h3>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</h3>
         <ul>
@@ -120,7 +121,7 @@
         <li><img src="img/logo-mishka.png" alt="Mishka"></li>
       </ul>
     </section>
-    <section>
+    <section class="hidden">
       <h2>Напишите нам</h2>
       <form action="" method="post">
         <div>
@@ -137,12 +138,13 @@
       </form>
     </section>
     <section>
-      <div>
+      <div class="contact-us">
         <h3>NЁRDS DESIGN STUDIO</h3>
         <p>191186, Санкт-Петербург,
           ул. Б. Конюшенная, д. 19/8
         </p>
         <p>тел. +7 (812) 275-75-75</p>
+        <a href="#" class="btn">Напишите нам</a>
       </div>
       <img src="img/map.jpg" alt="map">
     </section>
