--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navigation">
-      <a href="index.html">
+  <header class="top-header">
+    <nav class="main-navigation">
+      <a href="index.html" class="header-logo">
         <img src="img/nerds-logo.svg" alt="logo" />
       </a>
-      <ul>
-        <li><a href="#">Студия</a></li>
-        <li><a href="#">Клиенты</a></li>
-        <li><a href="inner.html">Магазин</a></li>
-        <li><a href="#">Контакты</a></li>
+      <ul class="site-navigation">
+        <li class="site-navigation-item"><a href="#">Студия</a></li>
+        <li class="site-navigation-item"><a href="#">Клиенты</a></li>
+        <li class="site-navigation-item"><a href="inner.html">Магазин</a></li>
+        <li class="site-navigation-item"><a href="#">Контакты</a></li>
       </ul>
-      <ul>
+      <ul class="basket">
         <li><a href="#">Корзина</a></li>
       </ul>
     </nav>
@@ -55,22 +55,22 @@
       </div>
     </section>
     <section>
-      <ul class="services">
-        <li>
+      <ul class="order-services">
+        <li class="order-services-item">
           <img src="img/illustration-1.jpg" alt="web-pages" width="300" height="146">
           <h3>ВЕБ-САЙТЫ</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="#" class="btn">ЗАКАЗАТЬ</a>
         </li>
 
-        <li>
+        <li class="order-services-item">
           <img src="img/illustration-2.jpg" alt="web-pages" width="300" height="146">
           <h3>ПРИЛОЖЕНИЯ</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="#" class="btn">ЗАКАЗАТЬ</a>
         </li>
 
-        <li>
+        <li class="order-services-item">
           <img src="img/illustration-3.jpg" alt="web-pages" width="300" height="146">
           <h3>ПРЕЗЕНТАЦИИ</h3>
           <p>Вы даже не подозреваете,
@@ -151,14 +151,16 @@
   </main>
   <footer class="main-footer">
 
-    <ul>
+    <ul class="social-media">
       <li><a href="#">vk</a></li>
       <li><a href="#">facebook</a></li>
       <li><a href="#">Instagram</a></li>
     </ul>
+    <div class="discount">
+      <h2>Давайте дружить, это выгодно!</h2>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
 
-    <h2>Давайте дружить, это выгодно!</h2>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
+    </div>
   </footer>
 </body>
 
