--- a/inner.html
+++ b/inner.html
@@ -14,17 +14,17 @@
 
 <body>
   <header class="top-header">
-    <nav class="navigation">
-      <a href="index.html">
+    <nav class="main-navigation">
+      <a href="index.html" class="header-logo">
         <img src="img/nerds-logo.svg" alt="logo" />
       </a>
-      <ul>
-        <li><a href="#">Студия</a></li>
-        <li><a href="#">Клиенты</a></li>
-        <li><a href="inner.html">Магазин</a></li>
-        <li><a href="#">Контакты</a></li>
+      <ul class="site-navigation">
+        <li class="site-navigation-item"><a href="#">Студия</a></li>
+        <li class="site-navigation-item"><a href="#">Клиенты</a></li>
+        <li class="site-navigation-item"><a href="inner.html">Магазин</a></li>
+        <li class="site-navigation-item"><a href="#">Контакты</a></li>
       </ul>
-      <ul>
+      <ul class="basket">
         <li><a href="#">Корзина</a></li>
       </ul>
     </nav>
@@ -63,7 +63,7 @@
           <button type="submit" aria-label="Показать" class="btn">Показать</button>
         </form>
       </div>
-      <div>
+      <div class="catalog">
         <div class="sorting">
           <p>СОРТИРОВАТЬ:</p>
           <ul class="sorting-list">
@@ -71,13 +71,13 @@
             <li><a href="#" class="sorting-item">ПО ТИПУ</a></li>
             <li><a href="#" class="sorting-item">ПО НАЗВАНИЮ</a></li>
           </ul>
-          <ul>
+          <ul class="arrows">
             <li><span>arrow-down</span></li>
             <li><span>arrow-up</span></li>
           </ul>
         </div>
         <div>
-          <ul>
+          <ul class="catalog-examples">
             <li>
               <a href="#"><img src="img/img-sedona.jpg" alt="Sedona"></a>
               <div>
@@ -131,14 +131,16 @@
   </main>
   <footer class="main-footer">
 
-    <ul>
+    <ul class="social-media">
       <li><a href="#">vk</a></li>
       <li><a href="#">facebook</a></li>
       <li><a href="#">Instagram</a></li>
     </ul>
+    <div class="discount">
+      <h2>Давайте дружить, это выгодно!</h2>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
 
-    <h2>Давайте дружить, это выгодно!</h2>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
+    </div>
   </footer>
 </body>
 
