--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
         <a href="#" class="btn">Узнать больше</a>
       </div>
       <div>
-        <img src="https://via.placeholder.com/698x413" alt="slide 1">
-        <!-- Предполагаю что картинка должна быть задана бэкграундом -->
         <ul>
           <li><span>pic 1</span></li>
           <li><span>pic 2</span></li>
@@ -79,7 +77,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="general-info">
       <div class="description">
         <h1>Мы - маленькая, но гордая дизайн-студия из Краснодара.</h1>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br> превыше креатива.Работаем не
@@ -97,7 +95,7 @@
       <div class="statistic">
         <img src="img/nerds-illustration.png" alt="nerds-logo">
         <h3>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</h3>
-        <ul>
+        <ul class="statistic-list">
           <li>
             <h1>146%</h1>
             <p>Уровень самоотдачи</p>
@@ -114,7 +112,7 @@
       </div>
     </section>
     <section>
-      <ul>
+      <ul class="list-of-logos">
         <li><img src="img/logo-htmlacademy.png" alt="HtmlAcademy"></li>
         <li><img src="img/logo-borodinski.png" alt="Barbershop"></li>
         <li><img src="img/logo-pink.png" alt="Pink"></li>
